Wrap background component to React memo hook in order to stop rerendering it on search typing

--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -17,9 +17,9 @@
       background: rgba(0, 0, 0, 0.2);
       padding: 40px;
       border-radius: 15px;
-      backdrop-filter: blur(12px);
+      backdrop-filter: blur(10px);
       border: 2px solid rgba(255, 255, 255, 0.1);
-      box-shadow: 0 6px 20px rgba(255, 215, 0, 0.4);
+      box-shadow: 0 2px 15px rgba(255, 215, 0, 0.1);
       max-width: 500px;
       width: 100%;
     }
